# nerd-backup

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker_build_and_publish.yml
src/: error.rs  main.rs  restic.rs
